meta data extraction using VorbisComment